CMS7-8837: Fix document editor font cut off in value containers

--- a/cms/api/src/main/styling/less/_editor.less
+++ b/cms/api/src/main/styling/less/_editor.less
@@ -412,3 +412,9 @@
 .browse-perspective-center-body .tabpanel form > div > div {
   .fixed-height(100%);
 }
+
+.hippo-editor-field-value-container {
+  line-height: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
