--- a/cms/api/src/main/styling/less/_editor_preview.less
+++ b/cms/api/src/main/styling/less/_editor_preview.less
@@ -16,11 +16,6 @@
   background: @white;
 }
 
-.hippo-editor-field-value-container {
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
 .hippo-preview-document-wrapper {
 
   .hippo-editor-large .hippo-editor-field-title,
@@ -102,7 +97,6 @@
     > .hippo-editor-field-value-container {
       display: list-item;
       list-style-position: inside;
-      line-height: 1em;
 
       &.non-breaking {
         line-height: 16px;
